fixed some test errors